--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
                 <div class="s-modal-content">
                 
-                    <p class="f-18">
+                    <p class="f-18 mt-30">
                         <span class="pre-number">3</span> Which <strong>Family law</strong> issues(s) apply to your case?
                     </p>
 
@@ -443,7 +443,7 @@
                         <h4 class="text-uppercase">Other Categories</h4>
                         <p>Choose the category that best fits your case</p>
 
-                        <div class="addcat-list-wrapper">
+                        <div class="addcat-list-wrapper mt-20">
                         <div class="row">
 
                             <div class="col-lg-6">
