replaced user icon placeholders with image

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="review-item">
 
                                 <div class="rev-profile">
-                                    <img src="//via.placeholder.com/60x60" alt="user icon" class="rounded-icon" width="60" height="60" />
+                                    <img src="/assets/img/user-60x60.png" alt="user icon" class="rounded-icon" width="60" height="60" />
                                     <span class="name">Mitchell M.</span>
                                     <span class="address">Cherry Hill, NJ</span>
                                 </div>
@@ -142,7 +142,7 @@
                             <div class="review-item">
 
                                 <div class="rev-profile">
-                                    <img src="//via.placeholder.com/60x60" alt="user icon" class="rounded-icon" width="60" height="60" />
+                                    <img src="/assets/img/user-60x60.png" alt="user icon" class="rounded-icon" width="60" height="60" />
                                     <span class="name">Joel C.</span>
                                     <span class="address">Little Rock, AK</span>
                                 </div>
@@ -169,7 +169,7 @@
                             <div class="review-item">
 
                                 <div class="rev-profile">
-                                    <img src="//via.placeholder.com/60x60" alt="user icon" class="rounded-icon" width="60" height="60" />
+                                    <img src="/assets/img/user-60x60.png" alt="user icon" class="rounded-icon" width="60" height="60" />
                                     <span class="name">Brigida R.</span>
                                     <span class="address">Dallas, TX</span>
                                 </div>
@@ -360,7 +360,7 @@
                         <div class="divider"></div>
 
                         <div class="client-review-user">
-                            <img src="//via.placeholder.com/80x80" alt="user icon" class="rounded-icon profile-img" width="80" height="80" />
+                            <img src="/assets/img/user-80x80.png" alt="user icon" class="rounded-icon profile-img" width="80" height="80" />
                             <div class="profile-info">
                                 <h3 class="f-normal">Brigida R.</h3>
                                 <span>Dallas TX</span>
